load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "fft_frequency_estimator",
    srcs = ["fft_frequency_estimator.py"],
    deps = [
        "//simulation/estimator:frequency_estimator",
        "//simulation/radar/components:peak_selector",
        "//simulation/radar/components:samples",
        "//utils/regression:parabolic_regression",
        requirement("numpy"),
    ],
)

py_test(
    name = "fft_frequency_estimator_test",
    srcs = ["fft_frequency_estimator_test.py"],
    deps = [
        ":fft_frequency_estimator",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "fft_frequency_estimator_main",
    srcs = ["fft_frequency_estimator_main.py"],
    deps = [
        ":fft_frequency_estimator",
        "//simulation/estimator:complex_exponential",
        requirement("absl-py"),
        requirement("SciencePlots"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)
