load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "adc_data",
    srcs = ["adc_data.py"],
    deps = [
        ":chirp",
        ":radar",
        ":samples",
        ":target",
        "//utils:constants",
        requirement("numpy"),
    ],
)

py_test(
    name = "adc_data_test",
    srcs = ["adc_data_test.py"],
    deps = [
        ":adc_data",
        ":radar",
        ":target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "chirp",
    srcs = ["chirp.py"],
    deps = [
        ":radar",
        requirement("numpy"),
    ],
)

py_test(
    name = "chirp_test",
    srcs = ["chirp_test.py"],
    deps = [
        ":chirp",
        ":radar",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "chirp_mixing_main",
    srcs = ["chirp_mixing_main.py"],
    deps = [
        ":chirp",
        ":radar",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "chirp_waveform_main",
    srcs = ["chirp_waveform_main.py"],
    deps = [
        ":chirp",
        ":radar",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_library(
    name = "coordinates",
    srcs = ["coordinates.py"],
    deps = [requirement("numpy")],
)

py_test(
    name = "coordinates_test",
    srcs = ["coordinates_test.py"],
    deps = [
        ":coordinates",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "noise",
    srcs = ["noise.py"],
    deps = [
        ":samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "peak_selector",
    srcs = ["peak_selector.py"],
    deps = [
        ":samples",
        requirement("numpy"),
    ],
)

py_test(
    name = "peak_selector_test",
    srcs = ["peak_selector_test.py"],
    deps = [
        ":peak_selector",
        ":samples",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "radar",
    srcs = ["radar.py"],
    deps = [
        ":coordinates",
        ":noise",
        ":target",
        "//utils:constants",
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_library(
    name = "samples",
    srcs = ["samples.py"],
    deps = [requirement("numpy")],
)

py_test(
    name = "samples_test",
    srcs = ["samples_test.py"],
    deps = [
        ":samples",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "spatial_samples",
    srcs = ["spatial_samples.py"],
    deps = [
        ":radar",
        ":samples",
        ":target",
        "//simulation/radar/processors:range_doppler_processor",
        requirement("numpy"),
    ],
)

py_library(
    name = "target",
    srcs = ["target.py"],
    deps = [
        ":coordinates",
        requirement("numpy"),
    ],
)

py_binary(
    name = "target_snr_vs_range_main",
    srcs = ["target_snr_vs_range_main.py"],
    deps = [
        ":adc_data",
        ":radar",
        ":target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)
