load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "doa_estimator",
    srcs = ["doa_estimator.py"],
    deps = [
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//utils/visualization:color_maps",
        "//utils:constants",
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_library(
    name = "doa_array_extension_estimator",
    srcs = ["doa_array_extension_estimator.py"],
    deps = [
        ":doa_fft_estimator",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        requirement("numpy"),
    ],
)


py_library(
    name = "doa_fft_estimator",
    srcs = ["doa_fft_estimator.py"],
    deps = [
        ":doa_estimator",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "doa_music_estimator",
    srcs = ["doa_music_estimator.py"],
    deps = [
        ":doa_estimator",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:spatial_samples",
        requirement("numpy"),
    ],
)
