load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "doa_estimator",
    srcs = ["doa_estimator.py"],
    deps = [
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//simulation/radar/processors:signal_processor",
        requirement("numpy"),
    ],
)

py_library(
    name = "doa_array_extension_estimator",
    srcs = ["doa_array_extension_estimator.py"],
    deps = [
        ":doa_fft_estimator",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        requirement("numpy"),
    ],
)

py_binary(
    name = "doa_array_extension_estimator_main",
    srcs = ["doa_array_extension_estimator_main.py"],
    deps = [
        ":doa_array_extension_estimator",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        "//simulation/radar/components:target",
        "//simulation/radar/processors:range_doppler_processor",
        requirement("absl-py"),
    ],
)

py_library(
    name = "doa_fft_estimator",
    srcs = ["doa_fft_estimator.py"],
    deps = [
        ":doa_estimator",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        "//simulation/radar/processors:fft_processor",
        requirement("numpy"),
    ],
)

py_binary(
    name = "doa_fft_estimator_main",
    srcs = ["doa_fft_estimator_main.py"],
    deps = [
        ":doa_fft_estimator",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        "//simulation/radar/components:target",
        "//simulation/radar/processors:range_doppler_processor",
        requirement("absl-py"),
    ],
)

py_library(
    name = "doa_music_estimator",
    srcs = ["doa_music_estimator.py"],
    deps = [
        ":doa_estimator",
        "//simulation/radar/components:coordinates",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:spatial_samples",
        requirement("numpy"),
    ],
)

py_binary(
    name = "doa_music_estimator_main",
    srcs = ["doa_music_estimator_main.py"],
    deps = [
        ":doa_music_estimator",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        "//simulation/radar/components:target",
        "//simulation/radar/processors:range_doppler_processor",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "doa_music_estimator_snapshot_main",
    srcs = ["doa_music_estimator_snapshot_main.py"],
    deps = [
        ":doa_music_estimator",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:spatial_samples",
        "//simulation/radar/components:target",
        "//simulation/radar/processors:range_doppler_processor",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)
