load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "fft_processor",
    srcs = ["fft_processor.py"],
    deps = [
        ":signal_processor",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "matched_filter_processor",
    srcs = ["matched_filter_processor.py"],
    deps = [
        ":signal_processor",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "range_doppler_processor",
    srcs = ["range_doppler_processor.py"],
    deps = [
        ":fft_processor",
        ":matched_filter_processor",
        ":signal_processor",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_test(
    name = "range_doppler_processor_test",
    srcs = ["range_doppler_processor_test.py"],
    deps = [
        ":range_doppler_processor",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "range_doppler_processor_main",
    srcs = ["range_doppler_processor_main.py"],
    deps = [
        ":range_doppler_processor",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "range_fft_phased_array_main",
    srcs = ["range_fft_phased_array_main.py"],
    deps = [
        ":range_doppler_processor",
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_library(
    name = "signal_processor",
    srcs = ["signal_processor.py"],
    deps = [
        "//simulation/radar/components:radar",
        "//simulation/radar/components:samples",
        "//utils:constants",
        "//utils/visualization:color_maps",
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)
