load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "phased_array_main",
    srcs = ["phased_array_main.py"],
    deps = [
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:range_doppler_map",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "snr_vs_range_main",
    srcs = ["snr_vs_range_main.py"],
    deps = [
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:target",
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)

py_binary(
    name = "range_doppler_main",
    srcs = ["range_doppler_main.py"],
    deps = [
        "//simulation/radar/components:adc_data",
        "//simulation/radar/components:radar",
        "//simulation/radar/components:range_doppler_map",
        "//simulation/radar/components:samples",
        "//simulation/radar/components:target",
        "//utils:constants",
        "//utils/visualization:color_maps",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
    ],
)
