package(default_visibility = ["//visibility:public"])

cc_library(
    name = "assignment",
    hdrs = ["assignment.h"],
    deps = [
        "//simulation/swarm/missile",
        "//simulation/swarm/target",
    ],
)

cc_library(
    name = "distance_assignment",
    srcs = ["distance_assignment.cc"],
    hdrs = ["distance_assignment.h"],
    deps = [
        ":assignment",
        "//simulation/swarm/missile",
        "//simulation/swarm/target",
        "@eigen",
    ],
)

cc_test(
    name = "distance_assignment_test",
    srcs = ["distance_assignment_test.cc"],
    deps = [
        ":distance_assignment",
        "//simulation/swarm/missile",
        "//simulation/swarm/missile:dummy_missile",
        "//simulation/swarm/target",
        "//simulation/swarm/target:dummy_target",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
