package(default_visibility = ["//visibility:public"])

cc_library(
    name = "discretizer",
    srcs = ["discretizer.cc"],
    hdrs = ["discretizer.h"],
    deps = ["@eigen"],
)

cc_test(
    name = "discretizer_test",
    srcs = ["discretizer_test.cc"],
    deps = [
        ":discretizer",
        "@eigen",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
